--- a/static/css/base.css
+++ b/static/css/base.css
@@ -224,26 +224,33 @@ header,
 
 .btn-book {
     position: fixed;
-    top: 20%;
-    left: 79%;
+    right: 8%;
     width: 10rem;
     font-size: 1.8rem;
     z-index: 1;
+    margin-top: 0;
 }
 
 .btn-sold {
     position: absolute;
     background-color: #000000;
     opacity: 1 !important;
-    top: 6%;
-    left: 79%;
     width: 10rem;
     font-size: 1.8rem;
     z-index: 1;
+    display: block;
+    right: 8%;
+    margin-top: 0;
+}
+
+.trip-image {
+    position: relative;
+    object-fit: cover;
 }
 
 .btn-favourite {
     position: absolute;
+    z-index: 1;
 }
 
 .btn-favourite i {
@@ -594,13 +601,9 @@ footer {
         font-size: 0.9rem;
     }
 
-    .btn-book {
-        top: 14%;
-        left: 80%;
-    }
-
+    .btn-book,
     .btn-sold {
-        left: 82%;
+        right: 2%
     }
 
 }
@@ -626,11 +629,6 @@ footer {
 
     .main-nav {
         width: auto !important;
-    }
-
-    .btn-book {
-        left: 65% !important;
-        top: 35% !important;
     }
 }
 
@@ -683,17 +681,13 @@ footer {
     }
 
     .btn-sold {
-        left: 68% !important;
-        top: 4.7% !important;
-        width: 7rem;
-        font-size: 1rem;
+        width: 5rem;
+        font-size: 0.8rem;
     }
 
     .btn-book {
-        left: 67% !important;
         width: 7rem;
         font-size: 1rem;
-        top: 30% !important;
     }
 
     .btn-group {
@@ -712,16 +706,6 @@ footer {
 
     .form-group {
         width: 12rem;
-    }
-
-    .btn-book {
-        top: 20%;
-        left: 75%;
-    }
-
-    .btn-sold {
-        top: 6%;
-        left: 76%;
     }
 
     .error-500 {
