Fix: removed custom validation due to the issue causing when validation a form

--- a/trips/templates/trips/trip_detail.html
+++ b/trips/templates/trips/trip_detail.html
@@ -100,9 +100,7 @@
                                                 <p><strong>Select the Date: </strong><i class="far fa-calendar-alt"></i>
                                                     <label for="datepicker"></label>
                                                     <input type="text" class="calendar form-control" name="booking_date"
-                                                        id="datepicker" oninput="this.setCustomValidity('')"
-                                                        oninvalid="this.setCustomValidity('Please select the date for your trip')"
-                                                        required>
+                                                        id="datepicker" required>
                                                 </p>
                                             </div>
                                         </div>
