--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -1,9 +1,9 @@
 .form-control {
-    margin: 0.3rem;
+  margin: 0.3rem;
 }
 
 .form-control:focus {
-    border-color: #2576da;
+  border-color: #2576da;
 }
 
 .btn-next {
@@ -15,6 +15,7 @@
 .trip-link strong:hover {
   color: #fafafa;
 }
+
 /**************Stripe*/
 
 input,
@@ -41,13 +42,13 @@ input,
 }
 
 .stripe-style-input::placeholder {
-    color: #aab7c4;
+  color: #aab7c4;
 }
 
 #payment-form .form-control,
 #card_elements {
-    color: #000000;
-    border: 1px solid #000000;
+  color: #000000;
+  border: 1px solid #000000;
 }
 
 select,
@@ -61,22 +62,22 @@ select option[value=""] {
 }
 
 .fieldset-label {
-    position: relative;
-    right: .5rem;
+  position: relative;
+  right: .5rem;
 }
 
 #card-errors {
-    color: #ef1018;
+  color: #ef1018;
 }
 
 #loading {
-	display: none;
-	position: fixed;
+  display: none;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(37,118,218, 0.8);
+  background: rgba(37, 118, 218, 0.8);
   z-index: 9999;
 }
 
