--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,7 +4,7 @@
 {% block extra_title %} Home {% endblock %}
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'home/css/home.css' %}">
+<link rel="stylesheet" href="{% static 'home/css/home.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -13,27 +13,26 @@
         <div class="row">
             <div class="col">
                 <!---carousel-->
-                <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-touch="true">
+                <div id="carouselExampleSlidesOnly" class="carousel slide carousel-fade" data-bs-ride="carousel"
+                    data-bs-touch="true">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="{{ MEDIA_URL }}media/catamaran.jpg"
-                                class="d-block w-100 carousel-img" alt="catamaran sailing in the sea">
+                            <img src="{{ MEDIA_URL }}media/catamaran.jpg" class="d-block w-100 carousel-img"
+                                alt="catamaran sailing in the sea">
                         </div>
                         <div class="carousel-item">
-                            <img src="{{ MEDIA_URL }}media/gozo.jpg"
-                                class="d-block w-100 carousel-img" alt="gozo island">
+                            <img src="{{ MEDIA_URL }}media/gozo.jpg" class="d-block w-100 carousel-img"
+                                alt="gozo island">
                         </div>
                         <div class="carousel-item">
-                            <img src="{{ MEDIA_URL }}media/maltese-boats.jpg"
-                                class="d-block w-100 carousel-img" alt="traditional maltese boats">
+                            <img src="{{ MEDIA_URL }}media/maltese-boats.jpg" class="d-block w-100 carousel-img"
+                                alt="traditional maltese boats">
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</section>
-<section>
     <div class="container mt-0">
         <!--heading-->
         <div class="row spacing">
@@ -112,7 +111,7 @@
                 <h3 class="text-center">Choose Your Category</h3>
             </div>
         </div>
-    <!--Display of Categories name and image with a link to category pages-->
+        <!--Display of Categories name and image with a link to category pages-->
         <div class="row category-div spacing">
             {% for category in categories %}
             <div class="col-lg-3 col-md-4 col-sm-6 p-2">
@@ -140,7 +139,6 @@
 
 
 {% block postloadjs %}
-    {{ block.super }}  
-    <script src="{% static 'home/js/home-script.js' %}"></script>
+{{ block.super }}
+<script src="{% static 'home/js/home-script.js' %}"></script>
 {% endblock %}
-
