Matched aria-labelledby with id

--- a/trips/templates/trips/trip_detail.html
+++ b/trips/templates/trips/trip_detail.html
@@ -53,7 +53,7 @@
                         data-bs-target="#exampleModal">
                         Book Now
                     </button>
-                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel-{{trip.id}}"
                         aria-hidden="true">
                         <div class="modal-dialog">
                             <div class="modal-content review-form">
