--- a/trips/templates/trips/add_trip.html
+++ b/trips/templates/trips/add_trip.html
@@ -5,131 +5,131 @@
 
 {% block content %}
 <section class="main-content">
-    <div class="container">
-      {% if user.is_superadmin %}
-        <div class="row justify-content-center">
-            <div class="col-md-auto mt-3">
-                <h2>Trip Managment</h2>
-            </div>
-        </div>
-        <div class="row login-form justify-content-md-center m-0 p-1 mb-1 mt-4">
-            <div class="col-12 text-center mt-2">
-              <h4>Add a new Trip here</h4>
-            </div>
-            <div class="col-lg-8 col-md-8 col-sm-12 p-1">
-                <form class="row g-3" action="{% url 'add_trip' %}" method="POST" enctype="multipart/form-data">
-                   {% csrf_token %}
-                   <div class="form-row col-12">
-                    <label for="id_name" class="form-label">Title:</label>
-                    {{ form.name }}
-                    {{ form.name.errors }}
-                  </div>
-                  <div class="form-row col-md-6">
-                    <label for="id_category" class="form-label">Category:</label>
-                    {{ form.category }}
-                    {{ form.category.errors }}
-                  </div>
-                  <div class="form-row col-md-6">
-                    <label for="id_num_tickets" class="form-label">Number of Ticket:</label>
-                    {{ form.num_tickets }}
-                    {{ form.num_tickets.errors }}
-                  </div>
-                  <div class="form-row col-12">
-                    <label for="id_short_description" class="form-label">Short Description:</label>
-                    {{ form.short_description }}
-                    {{ form.short_description.errors }}
-                  </div>
-                  <div class="form-row col-12">
-                    <label for="id_full_description" class="form-label">Full Description:</label>
-                    {{ form.full_description }}
-                    {{ form.full_description.errors }}
-                  </div>
-                  <div class="form-row col-12">
-                    <label for="id_included" class="form-label">What is included:</label>
-                    {{ form.included }}
-                    {{ form.included.errors }}
-                  </div>
-                  <div class="form-row col-12">
-                    <label for="id_what_to_bring" class="form-label">What to bring:</label>
-                    {{ form.what_to_bring }}
-                    {{ form.what_to_bring.errors }}
-                  </div>
-                  <div class="form-row col-md-6">
-                    <label for="id_duration" class="form-label">Duration:</label>
-                    {{ form.duration }}
-                    {{ form.duration.errors }}
-                  </div>
-                  <div class="col-md-6">
-                    <label for="id_start_time" class="form-label">Start Time:</label>
-                    {{ form.start_time }}
-                    {{ form.start_time.errors }}
-                  </div>
-                  <div class="form-row col-12">
-                    <label for="id_departure_location" class="form-label">Departure Location:</label>
-                    {{ form.departure_location }}
-                    {{ form.departure_location.errors }}
-                  </div>
-                  <div class="form-row col-md-6">
-                    <label for="id_adult_price" class="form-label">Adult Price:</label>
-                    {{ form.adult_price }}
-                  </div>
-                  <div class="col-md-6">
-                    <label for="id_child_price" class="form-label">Child Price:</label>
-                    {{ form.child_price }}
-                  </div>
-                  <div class="form-row col-12">
-                    <label for="id_images" class="form-label">Image:</label>
-                    {{ form.images }}
-                    {{ form.images.errors }}
-                  </div>
-                  <div class="form-row col-md-6">
-                    <label for="special_offers" class="form-label">Special Offers:</label>
-                    <input type="checkbox" name="special_offers" id="special_offers">
-                  </div>
-                  <div class="form-row col-md-6">
-                    <label for="family_friendly" class="form-label">Family Friendly:</label>
-                    <input type="checkbox" name='family_friendly' id="family_friendly" checked>
-                  </div>
-                  <!--Form Errorrs-->
-                  <div class="form-row col">
-                    {{ form.non_field_errors }}
-                  </div>
-                  <div class="form-row d-flex justify-content-center">
-                    <div class="col-md-4 col-sm-12">
-                      <a href="{% url 'profile' %}" class="btn btn-dropdown cancel-btn">
-                        <span class="icon">
-                          <i class="fas fa-times" aria-hidden="true"></i>
-                        </span>
-                        <span class="font-weight-bold">Cancel</span>
-                      </a>
-                    </div>
-                    <div class="col-md-4 col-sm-12">
-                       <!--submit button-->
-                      <button id="submit-button" class="btn btn-dropdown add-btn">
-                        <span class="font-weight-bold">Add Trip</span>
-                        <span class="icon">
-                          <i class="fas fa-plus" aria-hidden="true"></i>
-                        </span>
-                      </button>
-                    </div>      
-                  </div>
-                </form>
-            </div>
-        </div>
-      {% else %}
-      <div class="row">
-        <div class="col text-center mt-5">
-          <h4>You do not have permission to access this page!</h4>
-        </div>
+  <div class="container">
+    {% if user.is_superadmin %}
+    <div class="row justify-content-center">
+      <div class="col-md-auto mt-3">
+        <h2>Trip Managment</h2>
       </div>
-      <!--Button to return to all trips-->
-      <div class="row mt-2">
-        <div class="col text-center">
-          <a href="{% url 'trips' %}" class="btn-next btn">Go back to All Trips</a>
-        </div>
-      </div>
-      {% endif %}
     </div>
+    <div class="row login-form justify-content-md-center m-0 p-1 mb-1 mt-4">
+      <div class="col-12 text-center mt-2">
+        <h4>Add a new Trip here</h4>
+      </div>
+      <div class="col-lg-8 col-md-8 col-sm-12 p-1">
+        <form class="row g-3" action="{% url 'add_trip' %}" method="POST" enctype="multipart/form-data">
+          {% csrf_token %}
+          <div class="form-row col-12">
+            <label for="id_name" class="form-label">Title:</label>
+            {{ form.name }}
+            {{ form.name.errors }}
+          </div>
+          <div class="form-row col-md-6">
+            <label for="id_category" class="form-label">Category:</label>
+            {{ form.category }}
+            {{ form.category.errors }}
+          </div>
+          <div class="form-row col-md-6">
+            <label for="id_num_tickets" class="form-label">Number of Ticket:</label>
+            {{ form.num_tickets }}
+            {{ form.num_tickets.errors }}
+          </div>
+          <div class="form-row col-12">
+            <label for="id_short_description" class="form-label">Short Description:</label>
+            {{ form.short_description }}
+            {{ form.short_description.errors }}
+          </div>
+          <div class="form-row col-12">
+            <label for="id_full_description" class="form-label">Full Description:</label>
+            {{ form.full_description }}
+            {{ form.full_description.errors }}
+          </div>
+          <div class="form-row col-12">
+            <label for="id_included" class="form-label">What is included:</label>
+            {{ form.included }}
+            {{ form.included.errors }}
+          </div>
+          <div class="form-row col-12">
+            <label for="id_what_to_bring" class="form-label">What to bring:</label>
+            {{ form.what_to_bring }}
+            {{ form.what_to_bring.errors }}
+          </div>
+          <div class="form-row col-md-6">
+            <label for="id_duration" class="form-label">Duration:</label>
+            {{ form.duration }}
+            {{ form.duration.errors }}
+          </div>
+          <div class="col-md-6">
+            <label for="id_start_time" class="form-label">Start Time:</label>
+            {{ form.start_time }}
+            {{ form.start_time.errors }}
+          </div>
+          <div class="form-row col-12">
+            <label for="id_departure_location" class="form-label">Departure Location:</label>
+            {{ form.departure_location }}
+            {{ form.departure_location.errors }}
+          </div>
+          <div class="form-row col-md-6">
+            <label for="id_adult_price" class="form-label">Adult Price:</label>
+            {{ form.adult_price }}
+          </div>
+          <div class="col-md-6">
+            <label for="id_child_price" class="form-label">Child Price:</label>
+            {{ form.child_price }}
+          </div>
+          <div class="form-row col-12">
+            <label for="id_images" class="form-label">Image:</label>
+            {{ form.images }}
+            {{ form.images.errors }}
+          </div>
+          <div class="form-row col-md-6">
+            <label for="special_offers" class="form-label">Special Offers:</label>
+            <input type="checkbox" name="special_offers" id="special_offers">
+          </div>
+          <div class="form-row col-md-6">
+            <label for="family_friendly" class="form-label">Family Friendly:</label>
+            <input type="checkbox" name='family_friendly' id="family_friendly" checked>
+          </div>
+          <!--Form Errorrs-->
+          <div class="form-row col">
+            {{ form.non_field_errors }}
+          </div>
+          <div class="form-row d-flex justify-content-center">
+            <div class="col-md-4 col-sm-12 cancel-div">
+              <a href="{% url 'profile' %}" class="btn btn-dropdown cancel-btn">
+                <span class="icon">
+                  <i class="fas fa-times" aria-hidden="true"></i>
+                </span>
+                <span class="font-weight-bold">Cancel</span>
+              </a>
+            </div>
+            <div class="col-md-4 col-sm-12 add-div">
+              <!--submit button-->
+              <button id="submit-button" class="btn btn-dropdown add-btn">
+                <span class="font-weight-bold">Add Trip</span>
+                <span class="icon">
+                  <i class="fas fa-plus" aria-hidden="true"></i>
+                </span>
+              </button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    {% else %}
+    <div class="row">
+      <div class="col text-center mt-5">
+        <h4>You do not have permission to access this page!</h4>
+      </div>
+    </div>
+    <!--Button to return to all trips-->
+    <div class="row mt-2">
+      <div class="col text-center">
+        <a href="{% url 'trips' %}" class="btn-next btn">Go back to All Trips</a>
+      </div>
+    </div>
+    {% endif %}
+  </div>
 </section>
 
 
