--- a/trips/templates/trips/update_trip.html
+++ b/trips/templates/trips/update_trip.html
@@ -68,7 +68,7 @@
           <div class="form-row col-12">
             <label for="id_departure_location" class="form-label">Departure Location:</label>
             {{ form.departure_location }}
-            { form.departure_location.errors }}
+            {{ form.departure_location.errors }}
           </div>
           <div class="form-row col-md-6">
             <label for="id_adult_price" class="form-label">Adult Price:</label>
@@ -98,7 +98,7 @@
             {% endif %}
           </div>
           <div class="form-row d-flex justify-content-center">
-            <div class="col-md-4 col-sm-12">
+            <div class="col-md-4 col-sm-12 cancel-div">
               <!--cancel btn-->
               <a href="{% url 'trips' %}" class="btn btn-dropdown cancel-btn">
                 <span class="icon">
@@ -107,7 +107,7 @@
                 <span class="font-weight-bold">Cancel</span>
               </a>
             </div>
-            <div class="col-md-4 col-sm-12">
+            <div class="col-md-4 col-sm-12 add-div">
               <!--submit button-->
               <button id="submit-button" class="btn btn-dropdown add-btn">
                 <span class="font-weight-bold">Update</span>
